--- a/KLTN/package.json
+++ b/KLTN/package.json
@@ -10,15 +10,40 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-native-community/push-notification-ios": "^1.8.0",
+    "@react-native-firebase/app": "^10.8.0",
+    "@react-native-firebase/auth": "^10.8.0",
+    "@react-native-firebase/database": "^10.8.0",
+    "@react-native-firebase/messaging": "^10.8.0",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/material-top-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "crypto-js": "^3.3.0",
     "react": "16.13.1",
+    "react-dom": "^17.0.1",
     "react-native": "0.63.4",
+    "react-native-animatable": "^1.3.3",
+    "react-native-dropdown-picker": "^4.0.2",
+    "react-native-elements": "^3.2.0",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.7.1",
+    "react-native-push-notification": "^7.2.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.17.1"
+    "react-native-screens": "^2.17.1",
+    "react-native-smtp-mailer": "^1.2.4",
+    "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^2.15.2",
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^11.2.3",
+    "react-number-format": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
