--- a/KLTN/android/app/build.gradle
+++ b/KLTN/android/app/build.gradle
@@ -184,12 +184,23 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
+    implementation(project(':react-native-maps')){
+       exclude group: 'com.google.android.gms', module: 'play-services-base'
+       exclude group: 'com.google.android.gms', module: 'play-services-maps'
+    }
+    implementation 'com.google.android.gms:play-services-base:17.2.1'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     implementation project(path: ':zpdk-release')
+
     implementation project(':react-native-vector-icons')
+
+    implementation project(':react-native-maps')
+    
     implementation 'com.facebook.android:facebook-login:[8.1)'
     // implementation "androidx.multidex:multidex:2.0.1"
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
