--- a/KLTN/android/app/src/main/AndroidManifest.xml
+++ b/KLTN/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
       android:name=".MainApplication"
@@ -12,7 +15,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
-       <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/> 
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyBkeQ35Uv6UQDJgcYtbVZOqGrnS2Pntl1c"/>
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+      <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/> 
       <activity android:name="com.facebook.FacebookActivity" android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" /> 
       <activity android:name="com.facebook.CustomTabActivity" android:exported="true"> <intent-filter> 
       <action android:name="android.intent.action.VIEW" /> 
