--- a/KLTN/package.json
+++ b/KLTN/package.json
@@ -19,7 +19,8 @@
     "@react-native-firebase/auth": "^10.8.0",
     "@react-native-firebase/database": "^10.8.0",
     "@react-native-firebase/messaging": "^10.8.0",
-    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/material-top-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
@@ -32,18 +33,23 @@
     "react-native-elements": "^3.2.0",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-image-header-scroll-view": "^1.0.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "^0.27.1",
     "react-native-paper": "^4.7.1",
     "react-native-push-notification": "^7.2.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-share": "^5.1.4",
     "react-native-smtp-mailer": "^1.2.4",
+    "react-native-swipe-list-view": "^3.2.6",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
     "react-native-webview": "^11.2.3",
-    "react-number-format": "^4.4.4"
+    "react-number-format": "^4.4.4",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
